--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,8 @@
             <a href="/" class="name">Steve Gattuso</a>
             <div class="links">
               <a href="/">Home</a>
-              <a href="http://aday.stevegattuso.me" target="_blank">Aday</a>
-              <a href="https://github.com/stevenleeg">Github</a>
-              <!-- 
-                  <a href="http://twitter.com/stevenleeg">Twitter</a>
-                  <a href="https://www.linkedin.com/pub/steve-gattuso/29/885/580">LinkedIn</a>
-                  -->
+              <a href="www.linkedin.com/pub/steve-gattuso/29/885/580/" target="_blank">LinkedIn</a>
+              <a href="https://github.com/stevenleeg" target="_blank">Github</a>
               <a href="/contact.html">Contact</a>
             </div>
 
